cluster-XXXX/tenants/example-metrics/example-metrics-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-metrics
spec: {}
status: {}
