cluster-XXXX/tenants/example-metrics/example-metrics-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: example-metrics
  namespace: example-metrics
spec:
  to:
    kind: Service
    name: example-metrics
  tls:
    termination: edge
  port:
    targetPort: 8080-tcp
